Fix missing padding in page layout

--- a/src/main.css
+++ b/src/main.css
@@ -3,3 +3,9 @@ body,
 #root {
   height: 100%;
 }
+
+html,
+body,
+#root {
+  min-height: 100%;
+}
